Trying to fix timer cutoff error

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ button {
     font-family: digital-7;
     font-size: 7em;
     line-height: normal;
-    x-overflow: hidden;
+    overflow: hidden;
     background-image:linear-gradient(70deg,#4B79A1,#283E51); /* Dark Sky Gradient */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
